adding logos for the universities

--- a/academic_website/index.html
+++ b/academic_website/index.html
@@ -353,6 +353,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
+            <img src="images/northwestern.png" alt="Northwestern University" style="width: 55px; height: 55px; float: left; margin-right: 20px">
             <div class="h5">Northwestern University</div>
             <p class="category">Computer Science - PhD Candidate</p>
             <p>My current research focus includes natural language understanding, question answering, knowledge extraction, dialog systems, reasoning and data efficient learning.</p> 
@@ -371,6 +372,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
+            <img src="images/nyu.jpg" alt="Northwestern University" style="width: 55px; height: 55px; float: left; margin-right: 20px">
             <div class="h5">New York University</div>
             <p class="category">Bachelor of Computer Science - Visiting Student</p>
             <p>Activities: Programming team - every week we solved challenging programming problems to prepare for ACM ICPC competition. This helped sharp my programming skill as well as working in a team to solve computational problems.</p>
@@ -387,7 +389,8 @@
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
+          <div class="card-body">            
+            <img src="images/ufpe.jpg" alt="Northwestern University" style="width: 55px; height: 55px; float: left; margin-right: 20px; ">
             <div class="h5">Federal University of Pernambuco</div>
             <p class="category">Bachelor of Computer Science</p>
             <p>Graduated Magna Cum Laude. Best grades out of all other CS graduates.</p>
