adding academic CV

--- a/academic_website/index.html
+++ b/academic_website/index.html
@@ -42,7 +42,7 @@
           <div class="h2 title">Danilo Neves Ribeiro</div>
           <p class="category text-white">Computer Science PhD Candidate</p>
           <!-- <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Northwestern University</a> -->
-          <a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <a class="btn btn-primary" data-aos="zoom-in" href="academic_cv_fall_2020.pdf" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
