adding papers and organization details

--- a/academic_website/index.html
+++ b/academic_website/index.html
@@ -24,6 +24,9 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#organization">Organization</a></li>
+                
               </ul>
             </div>
           </div>
@@ -58,6 +61,7 @@
     </div>
   </div>
 </div>
+
 <div class="section" id="about">
   <div class="container">
     <div class="card" data-aos="fade-up" data-aos-offset="10">
@@ -65,8 +69,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Danilo Ribeiro, 4th year PhD student.</p>
-            <p>The goal of my research is to build intelligent agents that are able to incorporate knowledge and reasoning when processing natural language, either by enhancing current NLP systems or by creating innovative ways of learning and applying knowledge to solve language tasks. </p>
+            <p>Hello! I am Danilo Ribeiro.</p>
+            <p>I'm currently a PhD candidate at Northwestern University. The goal of my research is to build intelligent agents that are able to incorporate knowledge and reasoning when processing natural language, either by enhancing current NLP systems or by creating innovative ways of learning and applying knowledge to solve language tasks. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -78,7 +82,7 @@
             </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Emails:</strong></div>
-              <div class="col-sm-8">daniloribeiro2021@u.northwestern.edu<br>daniloneves.web@gmail.com</div>
+              <div class="col-sm-8">dnribeiro@u.northwestern.edu<br>daniloneves.web@gmail.com</div>
             </div>
             <!-- <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
@@ -98,6 +102,7 @@
     </div>
   </div>
 </div>
+
 <!-- <div class="section" id="skill">
   <div class="container">
     <div class="h4 text-center mb-4 title">Professional Skills</div>
@@ -340,6 +345,7 @@
     </div>
   </div>
 </div> -->
+
 <div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
@@ -401,54 +407,101 @@
     </div>
   </div>
 </div>
-<!-- <div class="section" id="reference">
+
+
+<div class="section" id="projects">
+  <div class="container cc-education">
+    <div class="h4 text-center mb-4 title">Projects & Papers - Highlights</div>
+    
+    <!-- ------ -->
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md paper-background-image" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500"  id="street-paper-img"></div>        
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">            
+            <div class="h5">STREET: A Multi-Task Structured Reasoning and Explanation Benchmark</div>
+            <p class="category">ICLR - 2023</p>
+            <p> STREET is a unified multi-task and multi-domain natural language reasoning and explanation benchmark. Unlike most existing question-answering (QA) datasets, models are expected to not only answer questions, but also produce step-by-step structured explanations describing how premises in the question are used to produce intermediate conclusions that can prove the correctness of a certain answer. </p>
+            <p style="font-size: 20px;">
+              <a href="https://arxiv.org/abs/2302.06729" target="_blank">paper &#128462;</a> |
+              <a href="https://github.com/amazon-science/street-reasoning" target="_blank">data &#9873;</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------ -->
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md paper-background-image" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500"  id="irgr-paper-img"></div>        
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">            
+            <div class="h5">Entailment Tree Explanations via Iterative Retrieval-Generation Reasoner</div>
+            <p class="category">NAACL - 2022</p>
+            <p> Structured explanations, called entailment trees, were recently suggested as a way to explain and inspect a QA system's answer. In order to better generate such entailment trees, we propose an architecture called Iterative Retrieval-Generation Reasoner (IRGR). Our model is able to explain a given hypothesis by systematically generating a step-by-step explanation from textual premises. </p>             
+            <p style="font-size: 20px;">
+              <a href="https://arxiv.org/abs/2205.09224" target="_blank">paper &#128462;</a>              
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------ -->
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md paper-background-image" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500"  id="propara-paper-img"></div>        
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">            
+            <div class="h5">Predicting State Changes in Procedural Text using  Analogical Question Answering</div>
+            <p class="category">ACS - 2019</p>
+            <p> Many of the changes in the world that happen over time are characterized by processes. Creating programs that comprehend procedural text (e.g. the stages of photosynthesis) is a crucial task in natural language understanding. In this paper we present a novel approach that uses analogical question answering to predict what state changes affect entities in a paragraph describing a process. </p>             
+            <p style="font-size: 20px;">
+              <a href="https://www.qrg.northwestern.edu/papers/Files/QRG_Dist_Files/QRG_2019/RibeiroACS2019.pdf" target="_blank">paper &#128462;</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="section" id="organization">
   <div class="container cc-reference">
-    <div class="h4 mb-4 text-center title">References</div>
+    <div class="h4 mb-4 text-center title">Organization & Volunteering</div>
     <div class="card" data-aos="zoom-in">
       <div class="carousel slide" id="cc-Indicators" data-ride="carousel">
         <ol class="carousel-indicators">
           <li class="active" data-target="#cc-Indicators" data-slide-to="0"></li>
-          <li data-target="#cc-Indicators" data-slide-to="1"></li>
-          <li data-target="#cc-Indicators" data-slide-to="2"></li>
+          <!-- <li data-target="#cc-Indicators" data-slide-to="1"></li>
+          <li data-target="#cc-Indicators" data-slide-to="2"></li> -->
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
-                <div class="h5 pt-2">Aiyana</div>
-                <p class="category">CEO / WEBM</p>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/ACL_logo.png" alt="Image"/>
+                <div class="h5 pt-2">ACL 2023</div>
+                <p class="category">workshop</p>
               </div>
               <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
-                <div class="h5 pt-2">Braiden</div>
-                <p class="category">CEO / Creativem</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row">
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>
-                <div class="h5 pt-2">Alexander</div>
-                <p class="category">CEO / Webnote</p>
-              </div>
-              <div class="col-lg-10 col-md-9">
-                <p> Habitasse venenatis commodo tempor eleifend arcu sociis sollicitudin ante pulvinar ad, est porta cras erat ullamcorper volutpat metus duis platea convallis, tortor primis ac quisque etiam luctus nisl nullam fames. Ligula purus suscipit tempus nascetur curabitur donec nam ullamcorper, laoreet nullam mauris dui aptent facilisis neque elementum ac, risus semper felis parturient fringilla rhoncus eleifend.</p>
+                <div class="h5">CFP: Natural Language Reasoning and Structured Explanations Workshop at ACL 2023</div>
+                <p> We welcome submissions on all topics related to natural language reasoning or structured explanations, which might include: Multi-step natural language reasoning; Structured explanations; Foundations of natural language reasoning; Applications of natural language reasoning; Knowledge retrieval for multi-step reasoning; Reasoning as programs; </p>
+                <p style="font-size: 20px;">
+                  <a href="https://nl-reasoning-workshop.github.io/" target="_blank">website &#x1f310;</a>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
 <!-- <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
