--- a/academic_website/index.html
+++ b/academic_website/index.html
@@ -362,7 +362,7 @@
             <img src="images/northwestern.png" alt="Northwestern University" style="width: 55px; height: 55px; float: left; margin-right: 20px">
             <div class="h5">Northwestern University</div>
             <p class="category">Computer Science - PhD Candidate</p>
-            <p>My current research focus includes natural language understanding, question answering, knowledge extraction, dialog systems, reasoning and data efficient learning.</p> 
+            <p>My current research focus includes natural language understanding, question answering, knowledge extraction, dialogue systems, reasoning and data efficient learning.</p> 
             <p>Advisor: <a href="https://users.cs.northwestern.edu/~forbus/">Ken Forbus</a></p>
           </div>
         </div>
